// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact reducer sucessfully adds new contact 1`] = `
{
  "contact": [
    {
      "name": "test user",
      "phone": "1234567",
    },
  ],
  "user": {
    "prevContact": {
      "name": "test user",
      "phone": "1234567",
    },
  },
}
`;

exports[`user reducer sucessfully adds new user 1`] = `
{
  "contact": [],
  "user": {
    "name": "test user",
  },
}
`;
